--- a/whospounding.html
+++ b/whospounding.html
@@ -98,6 +98,8 @@
                     <li>Luciano Agrusa</li>
                     <li>Vincent Daddona</li>
                     <li>Jason Gillham</li>
+                    <li>Nick Sokoll</li>
+                    <li>Colin Monnier</li>
                 </ol>
             </div>
         </div>
