--- a/whospounding.html
+++ b/whospounding.html
@@ -100,6 +100,7 @@
                     <li>Jason Gillham</li>
                     <li>Nick Sokoll</li>
                     <li>Colin Monnier</li>
+                    <li>Dave Hess</li>
                 </ol>
             </div>
         </div>
