--- a/whospounding.html
+++ b/whospounding.html
@@ -101,6 +101,7 @@
                     <li>Nick Sokoll</li>
                     <li>Colin Monnier</li>
                     <li>Dave Hess</li>
+                    <li>Caroline Findley</li>
                 </ol>
             </div>
         </div>
