--- a/whospounding.html
+++ b/whospounding.html
@@ -102,6 +102,7 @@
                     <li>Colin Monnier</li>
                     <li>Dave Hess</li>
                     <li>Caroline Findley</li>
+                    <li>Ryan Walsh</li>
                 </ol>
             </div>
         </div>
