--- a/whospounding.html
+++ b/whospounding.html
@@ -103,6 +103,8 @@
                     <li>Dave Hess</li>
                     <li>Caroline Findley</li>
                     <li>Ryan Walsh</li>
+                    <li>Ray Clark</li>
+                    <li>Kimberly Bugos</li>
                 </ol>
             </div>
         </div>
