--- a/whospounding.html
+++ b/whospounding.html
@@ -105,6 +105,11 @@
                     <li>Ryan Walsh</li>
                     <li>Ray Clark</li>
                     <li>Kimberly Bugos</li>
+                    <li>Phil Bogusz</li>
+                    <li>Matthew Taege</li>
+                    <li>Maggie Ritter</li>
+                    <li>Pegah Ahmadi</li>
+                    <li>Pegah Ahmadi Guest</li>
                 </ol>
             </div>
         </div>
