--- a/whospounding.html
+++ b/whospounding.html
@@ -110,6 +110,9 @@
                     <li>Maggie Ritter</li>
                     <li>Pegah Ahmadi</li>
                     <li>Pegah Ahmadi Guest</li>
+                    <li>Adam Metzger</li>
+                    <li>Mia Benberry</li>
+                    <li>Mia Benberry Guest</li>
                 </ol>
             </div>
         </div>
