--- a/whospounding.html
+++ b/whospounding.html
@@ -113,6 +113,9 @@
                     <li>Adam Metzger</li>
                     <li>Mia Benberry</li>
                     <li>Mia Benberry Guest</li>
+                    <li>Matt McDonald</li>
+                    <li>Dan Bacarella</li>
+                    <li>Rachel Burke</li>
                 </ol>
             </div>
         </div>
