--- a/signup.html
+++ b/signup.html
@@ -50,8 +50,8 @@
         <div class="row">
             <div class="small-12 medium-8 columns">
                 <h3>Registration is now closed.</h3>
-                <!--<p>I have extra shirts available. Email me at matthew.schragal@live.com to claim one. First come first serve.</p>
-                <p>Small: 5, Medium: 8, Large: 10, XL: 1</p> -->
+                <p>I have extra shirts available. Email me at schrags08@hotmail.com to claim one. First come first serve. $30</p>
+                <p>Extra Small: 2, Small: 7, Medium: 6, Large: 7, XL: 3</p>
                 <!--<h3>What Does Registration Get Me?</h3>
                 <p>Most importantly, the official Neighborhood Pub Crawl T-Shirt. These puppies are limited edition, custom designed, soft as hell, and built for comfort. Coveted stuff. As always, the artwork will remain secret until crawl day.</p>
                 <p>In addition to that, you get food during our stop at Three Counties. Papa Joe's Pizza, a neighborhood favorite, provides their legendary pie for our mouths.</p>
