--- a/whospounding.html
+++ b/whospounding.html
@@ -116,6 +116,7 @@
                     <li>Matt McDonald</li>
                     <li>Dan Bacarella</li>
                     <li>Rachel Burke</li>
+                    <li>Megan Lenk</li>
                 </ol>
             </div>
         </div>
