--- a/whospounding.html
+++ b/whospounding.html
@@ -117,6 +117,8 @@
                     <li>Dan Bacarella</li>
                     <li>Rachel Burke</li>
                     <li>Megan Lenk</li>
+                    <li>Brennan Basford</li>
+                    <li>Kevin Coyne</li>
                 </ol>
             </div>
         </div>
