--- a/whospounding.html
+++ b/whospounding.html
@@ -119,6 +119,7 @@
                     <li>Megan Lenk</li>
                     <li>Brennan Basford</li>
                     <li>Kevin Coyne</li>
+                    <li>Dan Merc</li>
                 </ol>
             </div>
         </div>
