--- a/whospounding.html
+++ b/whospounding.html
@@ -120,6 +120,9 @@
                     <li>Brennan Basford</li>
                     <li>Kevin Coyne</li>
                     <li>Dan Merc</li>
+                    <li>Patrick Gavin</li>
+                    <li>Patrick Gavin Guest</li>
+                    <li>Patrick Gavin Guest</li>
                 </ol>
             </div>
         </div>
