--- a/whospounding.html
+++ b/whospounding.html
@@ -123,6 +123,8 @@
                     <li>Patrick Gavin</li>
                     <li>Patrick Gavin Guest</li>
                     <li>Patrick Gavin Guest</li>
+                    <li>Natalie Madsen</li>
+                    <li>Greg Hargrove</li>
                 </ol>
             </div>
         </div>
