--- a/whospounding.html
+++ b/whospounding.html
@@ -125,6 +125,7 @@
                     <li>Patrick Gavin Guest</li>
                     <li>Natalie Madsen</li>
                     <li>Greg Hargrove</li>
+                    <li>David Messina</li>
                 </ol>
             </div>
         </div>
