--- a/whospounding.html
+++ b/whospounding.html
@@ -126,6 +126,7 @@
                     <li>Natalie Madsen</li>
                     <li>Greg Hargrove</li>
                     <li>David Messina</li>
+                    <li>Kris Kuznicki</li>
                 </ol>
             </div>
         </div>
