--- a/whospounding.html
+++ b/whospounding.html
@@ -127,6 +127,8 @@
                     <li>Greg Hargrove</li>
                     <li>David Messina</li>
                     <li>Kris Kuznicki</li>
+                    <li>Hillary Finet</li>
+                    <li>John White</li>
                 </ol>
             </div>
         </div>
