--- a/whospounding.html
+++ b/whospounding.html
@@ -129,6 +129,7 @@
                     <li>Kris Kuznicki</li>
                     <li>Hillary Finet</li>
                     <li>John White</li>
+                    <li>Lexi Thorstenson</li>
                 </ol>
             </div>
         </div>
