--- a/whospounding.html
+++ b/whospounding.html
@@ -130,6 +130,7 @@
                     <li>Hillary Finet</li>
                     <li>John White</li>
                     <li>Lexi Thorstenson</li>
+                    <li>Alex Moser</li>
                 </ol>
             </div>
         </div>
