--- a/whospounding.html
+++ b/whospounding.html
@@ -131,6 +131,7 @@
                     <li>John White</li>
                     <li>Lexi Thorstenson</li>
                     <li>Alex Moser</li>
+                    <li>Ed Farmer</li>
                 </ol>
             </div>
         </div>
