--- a/whospounding.html
+++ b/whospounding.html
@@ -132,6 +132,7 @@
                     <li>Lexi Thorstenson</li>
                     <li>Alex Moser</li>
                     <li>Ed Farmer</li>
+                    <li>Madeline Moser</li>
                 </ol>
             </div>
         </div>
