2019 save the date release

--- a/whospounding.html
+++ b/whospounding.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="small-12 medium-6 columns">
                     <div class="npc__eventInfo">
-                        <span class="npc__annual">16th Annual Neighborhood Pub Crawl</span>
-                        <span class="npc__eventDate">August 25th, 2018</span>
+                        <span class="npc__annual">17th Annual Neighborhood Pub Crawl</span>
+                        <span class="npc__eventDate">August 24th, 2019</span>
                     </div>
                 </div>
             </div>
@@ -42,8 +42,7 @@
                             <!--<li class="npc__askCheesy "><a href="/askcheesy.html">Ask Cheesy</a>
                                 <div class="npc__cheesySurprise"></div>
                             </li>
-                            <li ><a href="/gallery.html">Gallery</a></li>-->
-                        </ul>
+                            <li ><a href="/gallery.html">Gallery</a></li>-->                </ul>
                     </nav>
                 </div>
             </div>
@@ -55,87 +54,11 @@
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
                     <li>Billy Gavin</li>
-                    <li>Matt Artz</li>
-                    <li>Tim Redmond</li>
-                    <li>Kristy Johnson</li>
-                    <li>Michael Johnson</li>
-                    <li>Craig Fitzgerald</li>
-                    <li>Aaron Kohlhepp</li>
-                    <li>Molly Warner</li>
-                    <li>Tim Gavin</li>
-                    <li>Carrie North</li>
-                    <li>Noah Staton</li>
-                    <li>Tony Maguire</li>
-                    <li>Joy Kolb</li>
-                    <li>Devin Stubbs</li>
-                    <li>Ben Pfister</li>
-                    <li>Joy Rinehart</li>
-                    <li>Aaron Rinehart</li>
-                    <li>Amanda Pantle</li>
-                    <li>Amanda Pantle Guest</li>
-                    <li>Adria Stapleton</li>
-                    <li>Adria Stapleton Guest</li>
-                    <li>Tara Gavin</li>
-                    <li>Jason Mielcarek</li>
-                    <li>Jacob Nelson</li>
-                    <li>Alexandra Ochsner</li>
-                    <li>Dave &quot;Pudding Time&quot; Crites</li>
-                    <li>Stephanie Florey</li>
-                    <li>Stephanie Florey Guest</li>
-                    <li>Dave Weber</li>
-                    <li>Fiona Lowry</li>
-                    <li>Brian DiDuca</li>
-                    <li>Tara Phouthavongsa</li>
-                    <li>Patrick Palmieri</li>
-                    <li>Kert Evans</li>
-                    <li>Kert Evans Guest</li>
-                    <li>Beth Wenzl</li>
-                    <li>Dan Klimas</li>
-                    <li>Kristin Klimas</li>
-                    <li>Stacey Grodek</li>
-                    <li>Tim Grodek</li>
-                    <li>Denis Walsh</li>
-                    <li>Luciano Agrusa</li>
-                    <li>Vincent Daddona</li>
-                    <li>Jason Gillham</li>
-                    <li>Nick Sokoll</li>
-                    <li>Colin Monnier</li>
-                    <li>Dave Hess</li>
-                    <li>Caroline Findley</li>
-                    <li>Ryan Walsh</li>
-                    <li>Ray Clark</li>
-                    <li>Kimberly Bugos</li>
-                    <li>Phil Bogusz</li>
-                    <li>Matthew Taege</li>
-                    <li>Maggie Ritter</li>
-                    <li>Pegah Ahmadi</li>
-                    <li>Pegah Ahmadi Guest</li>
-                    <li>Adam Metzger</li>
-                    <li>Mia Benberry</li>
-                    <li>Mia Benberry Guest</li>
-                    <li>Matt McDonald</li>
-                    <li>Dan Bacarella</li>
-                    <li>Rachel Burke</li>
-                    <li>Megan Lenk</li>
-                    <li>Brennan Basford</li>
-                    <li>Kevin Coyne</li>
-                    <li>Dan Merc</li>
-                    <li>Patrick Gavin</li>
-                    <li>Patrick Gavin Guest</li>
-                    <li>Patrick Gavin Guest</li>
-                    <li>Natalie Madsen</li>
-                    <li>Greg Hargrove</li>
-                    <li>David Messina</li>
-                    <li>Kris Kuznicki</li>
-                    <li>Hillary Finet</li>
-                    <li>John White</li>
-                    <li>Lexi Thorstenson</li>
-                    <li>Alex Moser</li>
-                    <li>Ed Farmer</li>
-                    <li>Madeline Moser</li>
+        
                 </ol>
             </div>
         </div>
+        
     </div>
     <script src="assets/js/app.js"></script>
   </body>
