--- a/signup.html
+++ b/signup.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="small-12 medium-6 columns">
                     <div class="npc__eventInfo">
-                        <span class="npc__annual">16th Annual Neighborhood Pub Crawl</span>
-                        <span class="npc__eventDate">August 25th, 2018</span>
+                        <span class="npc__annual">17th Annual Neighborhood Pub Crawl</span>
+                        <span class="npc__eventDate">August 24th, 2019</span>
                     </div>
                 </div>
             </div>
@@ -49,10 +49,10 @@
         </header>
         <div class="row">
             <div class="small-12 medium-8 columns">
-                <h3>Registration is now closed.</h3>
-                <p>I have extra shirts available. Email me at schrags08@hotmail.com to claim one. First come first serve. $30</p>
-                <p>Extra Small: 2, Small: 3</p>
-                <!--<h3>What Does Registration Get Me?</h3>
+                <!-- <h3>Registration is now closed.</h3>
+                <p>I have extra shirts available. Email me at matthew.schragal@live.com to claim one. First come first serve.</p>
+                <p>Small: 5, Medium: 8, Large: 10, XL: 1</p> -->
+                <h3>What Does Registration Get Me?</h3>
                 <p>Most importantly, the official Neighborhood Pub Crawl T-Shirt. These puppies are limited edition, custom designed, soft as hell, and built for comfort. Coveted stuff. As always, the artwork will remain secret until crawl day.</p>
                 <p>In addition to that, you get food during our stop at Three Counties. Papa Joe's Pizza, a neighborhood favorite, provides their legendary pie for our mouths.</p>
                 <p>But wait, there's more...you get a shot at winning the Golden Ticket and are automatically entered into our one of a kind Neighborhood Pub Crawl Raffle.</p>
@@ -63,10 +63,10 @@
                 <p><strong>The cost of registration is $30</strong>. Well worth it for the souvenir and experience of a lifetime.</p>
                 <p>Registration can be completed via <strong>Venmo</strong> or <strong>PayPal</strong>.</p>
                 <h4>Why So Early?</h4>
-                <p>It takes time to ship &amp; print our badass shirts. We appreciate your cooperation.</p>-->
+                <p>It takes time to ship &amp; print our badass shirts. We appreciate your cooperation.</p>
             </div>
             <div class="small-12 medium-4 columns">
-                <!--<h4>Register by July 31st, 2018</h4>
+                <h4>Register by July 31st, 2019</h4>
                 <p><strong>Registration can only be done in advance.</strong> <strong>Shirts will not be sold on crawl day.</strong></p>
                 <p>You Can Pay via Venmo or PayPal. Venmo is preferred.</p>
                 <div class="method">
@@ -100,7 +100,7 @@
                     <a class="payment-button payment-button--paypal" href="https://www.paypal.com/paypalme/schrags08/30" target="_blank" title="Pay via PayPal">
                         <img src="assets/img/paypal_logo.png" alt="Pay via PayPal">
                     </a>
-                </div> -->
+                </div>
             </div>
         </div>
         
