--- a/whospounding.html
+++ b/whospounding.html
@@ -55,6 +55,7 @@
                     <li>Lucy Raymond</li>
                     <li>Billy Gavin</li>
                     <li>Denis Walsh</li>
+                    <li>Natalie Madsen</li>
                 </ol>
             </div>
         </div>
