--- a/whospounding.html
+++ b/whospounding.html
@@ -56,6 +56,7 @@
                     <li>Billy Gavin</li>
                     <li>Denis Walsh</li>
                     <li>Natalie Madsen</li>
+                    <li>Arturo Pena</li>
                 </ol>
             </div>
         </div>
