--- a/whospounding.html
+++ b/whospounding.html
@@ -57,6 +57,15 @@
                     <li>Denis Walsh</li>
                     <li>Natalie Madsen</li>
                     <li>Arturo Pena</li>
+                    <li>Emily Anderson</li>
+                    <li>Luke Anderson</li>
+                    <li>Brian Gillham</li>
+                    <li>Melissa Gillham</li>
+                    <li>Jason Gillham</li>
+                    <li>Dave Weber</li>
+                    <li>Fiona Weber</li>
+                    <li>Tony Maguire</li>
+                    <li>Joy Kolb</li>
                 </ol>
             </div>
         </div>
