--- a/whospounding.html
+++ b/whospounding.html
@@ -65,7 +65,7 @@
                     <li>Dave Weber</li>
                     <li>Fiona Weber</li>
                     <li>Tony Maguire</li>
-                    <li>Joy Kolb</li>
+                    <li>Joy Maguire</li>
                 </ol>
             </div>
         </div>
