--- a/whospounding.html
+++ b/whospounding.html
@@ -66,6 +66,11 @@
                     <li>Fiona Weber</li>
                     <li>Tony Maguire</li>
                     <li>Joy Maguire</li>
+                    <li>Kaitlyn Hoffman</li>
+                    <li>Ray Clark</li>
+                    <li>Stacey Grodek</li>
+                    <li>Tim Grodek</li>
+                    <li>Kimberly Bugos</li>
                 </ol>
             </div>
         </div>
