--- a/whospounding.html
+++ b/whospounding.html
@@ -71,6 +71,9 @@
                     <li>Stacey Grodek</li>
                     <li>Tim Grodek</li>
                     <li>Kimberly Bugos</li>
+                    <li>Maggie Long</li>
+                    <li>Dave Long</li>
+                    <li>Jason Mielcarek</li>
                 </ol>
             </div>
         </div>
