--- a/whospounding.html
+++ b/whospounding.html
@@ -74,6 +74,8 @@
                     <li>Maggie Long</li>
                     <li>Dave Long</li>
                     <li>Jason Mielcarek</li>
+                    <li>Ken Hoffman</li>
+                    <li>Ken Hoffman Guest</li>
                 </ol>
             </div>
         </div>
