--- a/whospounding.html
+++ b/whospounding.html
@@ -76,6 +76,9 @@
                     <li>Jason Mielcarek</li>
                     <li>Ken Hoffman</li>
                     <li>Ken Hoffman Guest</li>
+                    <li>Matt McDonald</li>
+                    <li>Michelle McDonald</li>
+                    <li>Matt Artz</li>
                 </ol>
             </div>
         </div>
