--- a/whospounding.html
+++ b/whospounding.html
@@ -79,6 +79,10 @@
                     <li>Matt McDonald</li>
                     <li>Michelle McDonald</li>
                     <li>Matt Artz</li>
+                    <li>Mia Benberry</li>
+                    <li>Jeremy Benberry</li>
+                    <li>Patrick Cavanaugh</li>
+                    <li>Jill Cavanaugh</li>
                 </ol>
             </div>
         </div>
