--- a/whospounding.html
+++ b/whospounding.html
@@ -83,6 +83,13 @@
                     <li>Jeremy Benberry</li>
                     <li>Patrick Cavanaugh</li>
                     <li>Jill Cavanaugh</li>
+                    <li>Dan Klimas</li>
+                    <li>Kristin Klimas</li>
+                    <li>Mike Johnson</li>
+                    <li>Kristy Johnson</li>
+                    <li>Anne Lindberg</li>
+                    <li>Joy Rinehart</li>
+                    <li>Aaron Rinehart</li>
                 </ol>
             </div>
         </div>
