--- a/whospounding.html
+++ b/whospounding.html
@@ -90,6 +90,17 @@
                     <li>Anne Lindberg</li>
                     <li>Joy Rinehart</li>
                     <li>Aaron Rinehart</li>
+                    <li>Alex Moser</li>
+                    <li>Amanda Pantle</li>
+                    <li>Amanda Pantle Guest</li>
+                    <li>Adria Stapleton</li>
+                    <li>Bridget Royer</li>
+                    <li>Vinny DelCerro</li>
+                    <li>Vinny DelCerro Guest</li>
+                    <li>Molly Warner</li>
+                    <li>Tim Gavin</li>
+                    <li>Jacob Nelson</li>
+                    <li>Carrie North</li>
                 </ol>
             </div>
         </div>
