--- a/whospounding.html
+++ b/whospounding.html
@@ -53,7 +53,7 @@
                 <ol>
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
-                    <li>Billy Gavin</li>
+                    <li><b>Billy Gavin</b></li>
                     <li>Denis Walsh</li>
                     <li>Natalie Madsen</li>
                     <li>Arturo Pena</li>
@@ -62,13 +62,13 @@
                     <li>Brian Gillham</li>
                     <li>Melissa Gillham</li>
                     <li>Jason Gillham</li>
-                    <li>Dave Weber</li>
+                    <li><b>Dave Weber</b></li>
                     <li>Fiona Weber</li>
                     <li>Tony Maguire</li>
                     <li>Joy Maguire</li>
                     <li>Kaitlyn Hoffman</li>
                     <li>Ray Clark</li>
-                    <li>Stacey Grodek</li>
+                    <li><b>Stacey Grodek</b></li>
                     <li>Tim Grodek</li>
                     <li>Kimberly Bugos</li>
                     <li>Maggie Long</li>
@@ -76,12 +76,12 @@
                     <li>Jason Mielcarek</li>
                     <li>Ken Hoffman</li>
                     <li>Ken Hoffman Guest</li>
-                    <li>Matt McDonald</li>
+                    <li><b>Matt McDonald</b></li>
                     <li>Michelle McDonald</li>
                     <li>Matt Artz</li>
                     <li>Mia Benberry</li>
                     <li>Jeremy Benberry</li>
-                    <li>Patrick Cavanaugh</li>
+                    <li><b>Patrick Cavanaugh</b></li>
                     <li>Jill Cavanaugh</li>
                     <li>Dan Klimas</li>
                     <li>Kristin Klimas</li>
@@ -99,8 +99,8 @@
                     <li>Vinny DelCerro Guest</li>
                     <li>Molly Warner</li>
                     <li>Tim Gavin</li>
-                    <li>Jacob Nelson</li>
-                    <li>Carrie North</li>
+                    <li><b>Jacob Nelson</b></li>
+                    <li><b>Carrie North</b></li>
                 </ol>
             </div>
         </div>
