--- a/whospounding.html
+++ b/whospounding.html
@@ -101,6 +101,11 @@
                     <li>Tim Gavin</li>
                     <li><b>Jacob Nelson</b></li>
                     <li><b>Carrie North</b></li>
+                    <li>Joe Long</li>
+                    <li>Nancy Long</li>
+                    <li>Greg Hargrove</li>
+                    <li>Steve Hardey</li>
+                    <li><b>Tim Redmond</b></li>
                 </ol>
             </div>
         </div>
