--- a/whospounding.html
+++ b/whospounding.html
@@ -106,6 +106,7 @@
                     <li>Greg Hargrove</li>
                     <li>Steve Hardey</li>
                     <li><b>Tim Redmond</b></li>
+                    <li>Erin Colleen</li>
                 </ol>
             </div>
         </div>
