--- a/whospounding.html
+++ b/whospounding.html
@@ -107,6 +107,7 @@
                     <li>Steve Hardey</li>
                     <li><b>Tim Redmond</b></li>
                     <li>Erin Colleen</li>
+                    <li>Rachel Burke</li>
                 </ol>
             </div>
         </div>
