--- a/whospounding.html
+++ b/whospounding.html
@@ -105,6 +105,7 @@
                     <li>Nancy Long</li>
                     <li>Greg Hargrove</li>
                     <li>Steve Hardey</li>
+                    <li>Steve Hardey Guest</li>
                     <li><b>Tim Redmond</b></li>
                     <li>Erin Colleen</li>
                     <li>Rachel Burke</li>
