--- a/whospounding.html
+++ b/whospounding.html
@@ -109,6 +109,13 @@
                     <li><b>Tim Redmond</b></li>
                     <li>Erin Colleen</li>
                     <li>Rachel Burke</li>
+                    <li>Patrick Palmieri</li>
+                    <li>Patrick Palmieri Guest</li>
+                    <li>Kert Evans</li>
+                    <li>Kert Evans Guest</li>
+                    <li>Patrick Gavin</li>
+                    <li>Jackie Prosperi</li>
+                    <li>Luciano Agrusa</li>
                 </ol>
             </div>
         </div>
