--- a/whospounding.html
+++ b/whospounding.html
@@ -116,6 +116,8 @@
                     <li>Patrick Gavin</li>
                     <li>Jackie Prosperi</li>
                     <li>Luciano Agrusa</li>
+                    <li>Matt Taege</li>
+                    <li><b>Maggie Ritter</b></li>
                 </ol>
             </div>
         </div>
