--- a/whospounding.html
+++ b/whospounding.html
@@ -106,7 +106,7 @@
                     <li>Greg Hargrove</li>
                     <li>Steve Hardey</li>
                     <li>Steve Hardey Guest</li>
-                    <li><b>Tim Redmond</b></li>
+                    <li><b>Tim "Dunce" Redmond</b></li>
                     <li>Erin Colleen</li>
                     <li>Rachel Burke</li>
                     <li>Patrick Palmieri</li>
@@ -118,6 +118,7 @@
                     <li>Luciano Agrusa</li>
                     <li>Matt Taege</li>
                     <li><b>Maggie Ritter</b></li>
+                    <li><b>Adam Moore</b></li>
                 </ol>
             </div>
         </div>
