--- a/whospounding.html
+++ b/whospounding.html
@@ -119,6 +119,7 @@
                     <li>Matt Taege</li>
                     <li><b>Maggie Ritter</b></li>
                     <li><b>Adam Moore</b></li>
+                    <li>James Webber</li>
                 </ol>
             </div>
         </div>
