--- a/whospounding.html
+++ b/whospounding.html
@@ -120,6 +120,7 @@
                     <li><b>Maggie Ritter</b></li>
                     <li><b>Adam Moore</b></li>
                     <li>James Webber</li>
+                    <li>Sue Raggioli</li>
                 </ol>
             </div>
         </div>
