--- a/whospounding.html
+++ b/whospounding.html
@@ -121,6 +121,8 @@
                     <li><b>Adam Moore</b></li>
                     <li>James Webber</li>
                     <li>Sue Raggioli</li>
+                    <li>Mike Angus</li>
+                    <li>Kevin Coyne</li>
                 </ol>
             </div>
         </div>
