--- a/whospounding.html
+++ b/whospounding.html
@@ -123,6 +123,11 @@
                     <li>Sue Raggioli</li>
                     <li>Mike Angus</li>
                     <li>Kevin Coyne</li>
+                    <li>Madeline Chudy</li>
+                    <li>Madeline Chudy Guest</li>
+                    <li>Scott Kania</li>
+                    <li>Sarah Bennett</li>
+                    <li>Grant Gajda</li>
                 </ol>
             </div>
         </div>
