--- a/whospounding.html
+++ b/whospounding.html
@@ -128,6 +128,7 @@
                     <li>Scott Kania</li>
                     <li>Sarah Bennett</li>
                     <li>Grant Gajda</li>
+                    <li>Jen Muscarello</li>
                 </ol>
             </div>
         </div>
