--- a/whospounding.html
+++ b/whospounding.html
@@ -125,10 +125,12 @@
                     <li>Kevin Coyne</li>
                     <li>Madeline Chudy</li>
                     <li>Madeline Chudy Guest</li>
+                    <li>Dan Bacarella</li>
                     <li>Scott Kania</li>
                     <li>Sarah Bennett</li>
                     <li>Grant Gajda</li>
                     <li>Jen Muscarello</li>
+                    <li>Gina Scarpetta</li>
                 </ol>
             </div>
         </div>
