--- a/whospounding.html
+++ b/whospounding.html
@@ -131,6 +131,7 @@
                     <li>Grant Gajda</li>
                     <li>Jen Muscarello</li>
                     <li>Gina Scarpetta</li>
+                    <li>Beth Wenzl</li>
                 </ol>
             </div>
         </div>
