--- a/whospounding.html
+++ b/whospounding.html
@@ -132,6 +132,7 @@
                     <li>Jen Muscarello</li>
                     <li>Gina Scarpetta</li>
                     <li>Beth Wenzl</li>
+                    <li>Matthew Cavanaugh</li>
                 </ol>
             </div>
         </div>
