--- a/whospounding.html
+++ b/whospounding.html
@@ -134,6 +134,8 @@
                     <li>Beth Wenzl</li>
                     <li>Matthew Cavanaugh</li>
                     <li>Mike Warner</li>
+                    <li>Katy Shovlin</li>
+                    <li>Mikey Shovlin</li>
                 </ol>
             </div>
         </div>
