Update dependencies and revise content for 2022

--- a/src/pages/history.html
+++ b/src/pages/history.html
@@ -5,8 +5,8 @@ title: History
     <div class="small-9 columns">
         <h3>Pub Crawl History</h3>
         <p>It began in 2003 as a small journey among close friends and has blossomed over the years to become the defining event of the summer.</p>
-        <p>The Neighborhood Pub Crawl features two zip codes of one of a kind destinations. We've got limited edition custom t-shirts, gaming, food, a house band, raffles, romance, marriages, babies, a dancy party, Captain Fun, the Chalice of Valor...you get the point.</p>
-        <p>The core mission of our journey is brigning good people together into the historic melting pot that is Milwaukee Avenue and Chicago's Northwest side. We honor this legendary artery with our pilmigrage every August.</p>
+        <p>The Neighborhood Pub Crawl features two zip codes of one of a kind destinations. We've got limited edition custom t-shirts, gaming, food, a house band, raffles, romance, marriages, babies, a dance party, Captain Fun, the Chalice of Valor...you get the point.</p>
+        <p>The core mission of our journey is bringing good people together into the historic melting pot that is Milwaukee Avenue and Chicago's Northwest side. We honor this legendary artery with our pilgrimage every August.</p>
         <p>Our quest offers a chance for friends old and new to unwind, connect, share a Żywiec, and re-discover why they actually became friends in the first place.</p>
         <p>The Neighborhood is always evolving as is our format. Come one, come all. Invite your friends, invite your friend's friends - invite a total stranger. All are welcome. The people are what make this event great. We look forward to seeing who comes out every year.</p>
         <p>Thank you,
