--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@ title: Home
 ---
 <div class="row">
     <div class="{{ global.cssPrefix }}__flickity-gallery small-12 columns">
-        {{> gallery2018 }}
+        {{> gallery2019 }}
     </div>
 </div>
 <div class="row {{ global.cssPrefix }}__features">
@@ -28,7 +28,7 @@ title: Home
                 </p>
             </div>
             <div class="small-12 medium-6 columns {{ global.cssPrefix }}__feature">
-                <h2>Want updates?</h2>
+                <h2>Mailing List?</h2>
                 <div class="{{ global.cssPrefix }}__updates-form">
                     <input type="text" placeholder="Name" name="name">
                     <input type="text" placeholder="Email" name="email">
