--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -14,7 +14,7 @@ title: Sign Up
         <p>All proceeds go back into the event.</p>
         <p>Shirts are picked up at the first bar, Mary's Place. I will not be carrying the backpack of shirts around this year like a dope. If you want yours, get to the first bar on time. Don't blow it.</p>
         <h4>How Much?</h4>
-        <p><strong>The cost of registration is $30</strong>. Well worth it for the souvenir and experience of a lifetime.</p>
+        <p><strong>The cost of registration is $35</strong>. Well worth it for the souvenir and experience of a lifetime.</p>
         <p>Registration can be completed via <strong>Venmo</strong> or <strong>PayPal</strong>.</p>
         <h4>Why So Early?</h4>
         <p>It takes time to ship &amp; print our badass shirts. We appreciate your cooperation.</p>
@@ -26,14 +26,14 @@ title: Sign Up
         <div class="method">
             <select name="payment">
                 <option value="Pay via...">-Payment Method-</option>
-                <option value="venmo" selected="true">Venmo</option>
+                <option value="venmo" selected="true">Venmo (Preferred)</option>
                 <option value="paypal">PayPal</option>
             </select>
         </div>
         <div class="modifier">
             <select name="size">
                 <option value="Select a Size">-Shirt Size-</option>
-                <option value="XS">Extra Small</option>
+                <!-- <option value="XS">Extra Small (if available)</option> -->
                 <option value="S">Small</option>
                 <option value="M">Medium</option>
                 <option value="L">Large</option>
@@ -49,9 +49,9 @@ title: Sign Up
         </div>
         <div class="checkout checkout--paypal" style="display:none;">
             <p>Click on the PayPal logo below to complete the process. <strong>Please specify your shirt size in the payment options.</strong></p>
-            <p>Available Sizes: XS, S, M, L, XL, XXL</p>
-            <p class="seriously">Seriously, before you click this PayPal button don't forget to specify your shirt size. Preferably in the payment options.</p>
-            <a class="payment-button payment-button--paypal" href="https://www.paypal.com/paypalme/schrags08/30" target="_blank" title="Pay via PayPal">
+            <p>Available Sizes: S, M, L, XL, XXL</p>
+            <p class="seriously">Seriously, before you click this PayPal button don't forget to specify your shirt size. Preferably in the <i>What's this payment for</i> options.</p>
+            <a class="payment-button payment-button--paypal" href="https://www.paypal.com/paypalme/schrags08/35" target="_blank" title="Pay via PayPal">
                 <img src="{{ root }}assets/img/paypal_logo.png" alt="Pay via PayPal">
             </a>
         </div>
