--- a/whospounding.html
+++ b/whospounding.html
@@ -54,7 +54,14 @@
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
                     <li>Billy Gavin</li>
-        
+                    <li>Haley Turner</li>
+                    <li>Tony Maguire</li>
+                    <li>Joy Kolb</li>
+                    <li>Pat Cavanaugh</li>
+                    <li>Denis Walsh</li>
+                    <li>Duygu Dabit</li>
+                    <li>Tony Dabit</li>
+                    <li>Tim Redmond</li>
                 </ol>
             </div>
         </div>
