--- a/whospounding.html
+++ b/whospounding.html
@@ -62,6 +62,7 @@
                     <li>Duygu Dabit</li>
                     <li>Tony Dabit</li>
                     <li>Tim Redmond</li>
+                    <li>Dan Collins</li>
                 </ol>
             </div>
         </div>
