--- a/whospounding.html
+++ b/whospounding.html
@@ -63,6 +63,7 @@
                     <li>Tony Dabit</li>
                     <li>Tim Redmond</li>
                     <li>Dan Collins</li>
+                    <li>Dan Klimas</li>
                 </ol>
             </div>
         </div>
