--- a/whospounding.html
+++ b/whospounding.html
@@ -64,6 +64,9 @@
                     <li>Tim Redmond</li>
                     <li>Dan Collins</li>
                     <li>Dan Klimas</li>
+                    <li>Emily Anderson</li>
+                    <li>Luke Anderson</li>
+                    <li>Jacob Nelson</li>
                 </ol>
             </div>
         </div>
