--- a/whospounding.html
+++ b/whospounding.html
@@ -67,6 +67,7 @@
                     <li>Emily Anderson</li>
                     <li>Luke Anderson</li>
                     <li>Jacob Nelson</li>
+                    <li>Ray Clark</li>
                 </ol>
             </div>
         </div>
