Add valor flair to registered crawlers list

--- a/whospounding.html
+++ b/whospounding.html
@@ -57,16 +57,16 @@
                     <li>Haley Turner</li>
                     <li>Tony Maguire</li>
                     <li>Joy Kolb</li>
-                    <li>Pat Cavanaugh</li>
+                    <li class="npc__valor">Pat Cavanaugh</li>
                     <li>Denis Walsh</li>
                     <li>Duygu Dabit</li>
                     <li>Tony Dabit</li>
-                    <li>Tim Redmond</li>
+                    <li class="npc__valor">Tim Redmond</li>
                     <li>Dan Collins</li>
                     <li>Dan Klimas</li>
                     <li>Emily Anderson</li>
                     <li>Luke Anderson</li>
-                    <li>Jacob Nelson</li>
+                    <li class="npc__valor">Jacob Nelson</li>
                     <li>Ray Clark</li>
                 </ol>
             </div>
