--- a/whospounding.html
+++ b/whospounding.html
@@ -68,6 +68,8 @@
                     <li>Luke Anderson</li>
                     <li class="npc__valor">Jacob Nelson</li>
                     <li>Ray Clark</li>
+                    <li>Kristy Johnson</li>
+                    <li>Mike Johnson</li>
                 </ol>
             </div>
         </div>
