--- a/whospounding.html
+++ b/whospounding.html
@@ -70,6 +70,8 @@
                     <li>Ray Clark</li>
                     <li>Kristy Johnson</li>
                     <li>Mike Johnson</li>
+                    <li>Joy Rinehart</li>
+                    <li>Joy Rinehart Guest</li>
                 </ol>
             </div>
         </div>
