--- a/whospounding.html
+++ b/whospounding.html
@@ -72,6 +72,7 @@
                     <li>Mike Johnson</li>
                     <li>Joy Rinehart</li>
                     <li>Joy Rinehart Guest</li>
+                    <li class="npc__valor">Carrie North</li>
                 </ol>
             </div>
         </div>
