--- a/whospounding.html
+++ b/whospounding.html
@@ -73,6 +73,8 @@
                     <li>Joy Rinehart</li>
                     <li>Joy Rinehart Guest</li>
                     <li class="npc__valor">Carrie North</li>
+                    <li>Molly Gavin</li>
+                    <li>Tim Gavin</li>
                 </ol>
             </div>
         </div>
