--- a/whospounding.html
+++ b/whospounding.html
@@ -75,6 +75,8 @@
                     <li class="npc__valor">Carrie North</li>
                     <li>Molly Gavin</li>
                     <li>Tim Gavin</li>
+                    <li class="npc__valor">Dave Weber</li>
+                    <li>Fiona Weber</li>
                 </ol>
             </div>
         </div>
