--- a/whospounding.html
+++ b/whospounding.html
@@ -77,6 +77,8 @@
                     <li>Tim Gavin</li>
                     <li class="npc__valor">Dave Weber</li>
                     <li>Fiona Weber</li>
+                    <li>Melissa Gillham</li>
+                    <li>Brian Gillham</li>
                 </ol>
             </div>
         </div>
