--- a/whospounding.html
+++ b/whospounding.html
@@ -66,6 +66,7 @@
                     <li>Dan Klimas</li>
                     <li>Emily Anderson</li>
                     <li>Luke Anderson</li>
+                    <li>Jimmy Webber</li>
                     <li class="npc__valor">Jacob Nelson</li>
                     <li>Ray Clark</li>
                     <li>Kristy Johnson</li>
@@ -79,6 +80,11 @@
                     <li>Fiona Weber</li>
                     <li>Melissa Gillham</li>
                     <li>Brian Gillham</li>
+                    <li class="npc__valor">Stacey Grodek</li>
+                    <li>Tim Grodel</li>
+                    <li>Chantel Dunham</li>
+                    <li>Neil Ghosh</li>
+                    <li class="npc__valor">Matt McDonald</li>
                 </ol>
             </div>
         </div>
