--- a/whospounding.html
+++ b/whospounding.html
@@ -81,7 +81,7 @@
                     <li>Melissa Gillham</li>
                     <li>Brian Gillham</li>
                     <li class="npc__valor">Stacey Grodek</li>
-                    <li>Tim Grodel</li>
+                    <li>Tim Grodek</li>
                     <li>Chantel Dunham</li>
                     <li>Neil Ghosh</li>
                     <li class="npc__valor">Matt McDonald</li>
