--- a/whospounding.html
+++ b/whospounding.html
@@ -53,7 +53,7 @@
                 <ol>
                     <li>Matt Schragal</li>
                     <li>Lucy Raymond</li>
-                    <li>Billy Gavin</li>
+                    <li class="npc__valor">Billy Gavin</li>
                     <li>Haley Turner</li>
                     <li>Tony Maguire</li>
                     <li>Joy Kolb</li>
