--- a/whospounding.html
+++ b/whospounding.html
@@ -85,6 +85,7 @@
                     <li>Chantel Dunham</li>
                     <li>Neil Ghosh</li>
                     <li class="npc__valor">Matt McDonald</li>
+                    <li>Kaitlyn Hoffman</li>
                 </ol>
             </div>
         </div>
