--- a/whospounding.html
+++ b/whospounding.html
@@ -86,6 +86,8 @@
                     <li>Neil Ghosh</li>
                     <li class="npc__valor">Matt McDonald</li>
                     <li>Kaitlyn Hoffman</li>
+                    <li>Amanda Pantle</li>
+                    <li>Tim Ebrom</li>
                 </ol>
             </div>
         </div>
