--- a/whospounding.html
+++ b/whospounding.html
@@ -88,6 +88,7 @@
                     <li>Kaitlyn Hoffman</li>
                     <li>Amanda Pantle</li>
                     <li>Tim Ebrom</li>
+                    <li class="npc__valor">Adam Moore</li>
                 </ol>
             </div>
         </div>
