--- a/whospounding.html
+++ b/whospounding.html
@@ -89,6 +89,8 @@
                     <li>Amanda Pantle</li>
                     <li>Tim Ebrom</li>
                     <li class="npc__valor">Adam Moore</li>
+                    <li>Adria Stapleton</li>
+                    <li>Adria Stapleton Guest</li>
                 </ol>
             </div>
         </div>
