--- a/whospounding.html
+++ b/whospounding.html
@@ -91,6 +91,9 @@
                     <li class="npc__valor">Adam Moore</li>
                     <li>Adria Stapleton</li>
                     <li>Adria Stapleton Guest</li>
+                    <li>Steve DiDuca</li>
+                    <li>Kert Evans</li>
+                    <li>Kert Evans Guest (Andrea)</li>
                 </ol>
             </div>
         </div>
