--- a/whospounding.html
+++ b/whospounding.html
@@ -94,6 +94,7 @@
                     <li>Steve DiDuca</li>
                     <li>Kert Evans</li>
                     <li>Kert Evans Guest (Andrea)</li>
+                    <li>Trudy Schragal</li>
                 </ol>
             </div>
         </div>
