--- a/whospounding.html
+++ b/whospounding.html
@@ -95,6 +95,7 @@
                     <li>Kert Evans</li>
                     <li>Kert Evans Guest (Andrea)</li>
                     <li>Trudy Schragal</li>
+                    <li>Samantha Wagner</li>
                 </ol>
             </div>
         </div>
