--- a/whospounding.html
+++ b/whospounding.html
@@ -96,6 +96,7 @@
                     <li>Kert Evans Guest (Andrea)</li>
                     <li>Trudy Schragal</li>
                     <li>Samantha Wagner</li>
+                    <li>Brian DiDuca</li>
                 </ol>
             </div>
         </div>
