--- a/whospounding.html
+++ b/whospounding.html
@@ -97,6 +97,7 @@
                     <li>Trudy Schragal</li>
                     <li>Samantha Wagner</li>
                     <li>Brian DiDuca</li>
+                    <li>Lindsay Lebica</li>
                 </ol>
             </div>
         </div>
