--- a/whospounding.html
+++ b/whospounding.html
@@ -98,6 +98,8 @@
                     <li>Samantha Wagner</li>
                     <li>Brian DiDuca</li>
                     <li>Lindsay Lebica</li>
+                    <li>Jason Mielcarek</li>
+                    <li>Elizabeth Adamowski</li>
                 </ol>
             </div>
         </div>
