--- a/whospounding.html
+++ b/whospounding.html
@@ -100,6 +100,10 @@
                     <li>Lindsay Lebica</li>
                     <li>Jason Mielcarek</li>
                     <li>Elizabeth Adamowski</li>
+                    <li>Lisa DiDuca</li>
+                    <li class="npc__valor">Craig Fitzgerald</li>
+                    <li>Kelly Fitzgerald</li>
+                    <li>Colleen Moran</li>
                 </ol>
             </div>
         </div>
