--- a/whospounding.html
+++ b/whospounding.html
@@ -104,6 +104,9 @@
                     <li class="npc__valor">Craig Fitzgerald</li>
                     <li>Kelly Fitzgerald</li>
                     <li>Colleen Moran</li>
+                    <li>Dana Sebenste</li>
+                    <li class="npc__valor">Maggie Taege</li>
+                    <li>Kimberly Bugos</li>
                 </ol>
             </div>
         </div>
